--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
-  "devDependencies": {
-    "nodemon": "^3.1.11"
-  }
+  "name": "mern-course",
+  "version": "1.0.0",
+  "description": "This is a MERN stack learning project.",
+  "main": "index.js",
+  "scripts": {
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
